--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@
             <version>${junit-platform.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- junit parametrized tests-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
@@ -77,6 +86,7 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
