--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,15 @@
                     <argLine>
                         --illegal-access=permit
                     </argLine>
+
+                    <!-- define group of tests based on tags configured on tests @Tag("model")
+                    <groups>model</groups>
+                    -->
+
+                    <!-- define excluded group of tests based on tags configured on tests @Tag("controllers")
+                    <excludedGroups>controllers</excludedGroups>
+                    -->
+
                 </configuration>
             </plugin>
             <plugin>
@@ -115,8 +124,29 @@
                         --illegal-access=permit
                     </argLine>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.7.1</version>
             </plugin>
         </plugins>
     </build>
-
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
